[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/InGame.gd" type="Script" id=1]
[ext_resource path="res://scenes/Communicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/regular-big.tres" type="DynamicFont" id=4]

[node name="InGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Communicator" parent="." instance=ExtResource( 2 )]

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1008.0
margin_bottom = 638.0
rect_min_size = Vector2( 980, 450 )
columns = 2

[node name="LabelLeft" type="Label" parent="GridContainer"]
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 3 )

[node name="LabelRight" type="Label" parent="GridContainer"]
margin_left = 404.0
margin_right = 984.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
align = 2
valign = 1

[node name="VBoxContainerLeft" type="VBoxContainer" parent="GridContainer"]
margin_top = 28.0
margin_right = 400.0
margin_bottom = 518.0
rect_min_size = Vector2( 400, 0 )

[node name="Title" type="Label" parent="GridContainer/VBoxContainerLeft"]
margin_right = 400.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 3 )
autowrap = true

[node name="VBoxContainerRight" type="VBoxContainer" parent="GridContainer"]
margin_left = 404.0
margin_top = 28.0
margin_right = 984.0
margin_bottom = 518.0
rect_min_size = Vector2( 580, 0 )

[node name="Description" type="Label" parent="GridContainer/VBoxContainerRight"]
margin_right = 580.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 490 )
custom_fonts/font = ExtResource( 3 )
align = 2
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 530.0
margin_right = 914.0
margin_bottom = 50.0
rect_min_size = Vector2( 980, 50 )
custom_constants/separation = 20
alignment = 1

[node name="ButtonCandidateLocations" type="Button" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 291.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Αναζητηση σε αλλη περιοχη"

[node name="ButtonFacilities" type="Button" parent="HBoxContainer"]
margin_left = 311.0
margin_right = 461.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Τι υπαρχει γυρω"

[node name="ButtonComputer" type="Button" parent="HBoxContainer"]
margin_left = 481.0
margin_right = 652.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Αναζητηση ατομων"

[node name="ButtonMainMenu" type="Button" parent="HBoxContainer"]
margin_left = 672.0
margin_right = 936.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
text = "Επιστροφη στην αρχικη σελιδα"

[node name="PopupFacilities" type="Popup" parent="."]
visible = true
margin_left = 420.0
margin_top = 70.0
margin_right = 620.0
margin_bottom = 157.0

[node name="LabelFacilities" type="Label" parent="PopupFacilities"]
margin_top = 25.0
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 4 )
text = "Τι υπαρχει γυρω"
align = 1
valign = 1

[node name="PopupCandidateLocations" type="Popup" parent="."]
visible = true
margin_left = 420.0
margin_top = 70.0
margin_right = 620.0
margin_bottom = 138.0
rect_min_size = Vector2( 200, 0 )

[node name="LabelCandidateLocations" type="Label" parent="PopupCandidateLocations"]
margin_top = 25.0
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 4 )
text = "Αλλες περιοχες"
align = 1
valign = 1

[node name="PopupNpc" type="Popup" parent="."]
visible = true
margin_left = 420.0
margin_top = 70.0
margin_right = 820.0
margin_bottom = 162.0
popup_exclusive = true

[node name="LabelFacility" type="Label" parent="PopupNpc"]
margin_top = 25.0
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 4 )

[node name="LabelNpc" type="Label" parent="PopupNpc"]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 3 )

[node name="LabelClue" type="Label" parent="PopupNpc"]
margin_top = 110.0
margin_right = 200.0
margin_bottom = 134.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1020.0
margin_bottom = 600.0
rect_min_size = Vector2( 1020, 600 )
color = Color( 0, 0, 0, 0.392157 )

[node name="ButtonClose" type="Button" parent="."]
visible = false
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Κλεισιμο"

[connection signal="pressed" from="HBoxContainer/ButtonCandidateLocations" to="." method="_on_ButtonCandidateLocations_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonFacilities" to="." method="_on_ButtonFacilities_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonComputer" to="." method="_on_ButtonComputer_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonMainMenu" to="." method="_on_ButtonMainMenu_pressed"]
[connection signal="pressed" from="ButtonClose" to="." method="_on_ButtonClose_pressed"]
